--- a/app/src/main/res/layout/select_container.xml
+++ b/app/src/main/res/layout/select_container.xml
@@ -16,7 +16,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/textView2"
@@ -43,7 +44,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:background="@color/white">
 
@@ -60,22 +61,24 @@
                     <TextView
                         android:id="@+id/ml200"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/play"
-                        android:layout_weight="1"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:text="200мл" />
+                        android:layout_weight="1"
+                        android:fontFamily="@font/play"
+                        android:text="200мл"
+                        android:textSize="14sp"
+                        android:gravity="center"/>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:background="@color/white">
 
                     <ImageButton
-                        android:id="@+id/imageButton"
+                        android:id="@+id/butt_cup"
                         android:scaleY="0.6"
                         android:scaleX="0.6"
                         android:layout_width="70dp"
@@ -85,19 +88,21 @@
                         app:tint="@color/black" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/ml300"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/play"
-                        android:layout_weight="1"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:text="300мл" />
+                        android:layout_weight="1"
+                        android:fontFamily="@font/play"
+                        android:text="300мл"
+                        android:textSize="14sp"
+                        android:gravity="center"/>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:background="@color/white">
 
@@ -114,38 +119,61 @@
                         android:id="@+id/ml500"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/play"
-                        android:layout_weight="1"
                         android:layout_gravity="center"
-                        android:text="500мл" />
+                        android:layout_weight="1"
+                        android:fontFamily="@font/play"
+                        android:gravity="center"
+                        android:text="500мл"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:background="@color/white">
+                    android:background="@color/white"
+                    android:orientation="vertical">
 
                     <ImageButton
-                        android:id="@+id/butt_unnown"
+                        android:id="@+id/butt_unknown"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:scaleY="0.8"
-                        android:scaleX="0.8"
                         android:background="@color/white"
-                        app:srcCompat="@drawable/icon_unnown"
-                        app:tint="@color/black"
-                        />
+                        android:scaleX="0.8"
+                        android:scaleY="0.8"
+                        app:srcCompat="@drawable/icon_unknown"
+                        app:tint="@color/black" />
 
-                    <TextView
-                        android:id="@+id/mlx"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/play"
-                        android:layout_weight="1"
-                        android:layout_gravity="center"
-                        android:text="мл" />
+                        android:background="@color/white"
+                        android:orientation="horizontal">
+
+                        <EditText
+                            android:id="@+id/num_of_ml"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:hint="350"
+                            android:maxLength="4"
+                            android:textSize="14sp"
+                            android:layout_marginStart="10dp"
+                            android:fontFamily="@font/play"
+                            android:inputType="number"/>
+
+                        <TextView
+                            android:id="@+id/mlx"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:fontFamily="@font/play"
+                            android:gravity="center"
+                            android:text="мл" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
