--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -93,6 +93,31 @@
                 app:layout_constraintTop_toBottomOf="@+id/litters_at_day" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <com.db.williamchart.view.BarChartView
+                android:layout_marginTop="10dp"
+                android:id="@+id/water_barChart"
+                android:layout_width="match_parent"
+                android:layout_height="307dp"
+                android:layerType="software"
+                app:chart_barsColor="@color/blue_dark"
+                app:chart_barsRadius="10dp"
+                app:chart_labelsColor="@color/blue_dark"
+                app:chart_labelsFont="@font/play"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                app:chart_axis = "x"
+                app:chart_labelsSize="18sp"
+                app:chart_spacing="20dp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </FrameLayout>
