--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -9,114 +9,114 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="336dp">
-
-            <RelativeLayout
-                android:id="@+id/linear"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@color/white"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/bottle"
-                android:layout_width="169dp"
-                android:layout_height="299dp"
-                android:src="@drawable/bottle"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.211"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
-
-            <Button
-                android:id="@+id/plus"
-                android:layout_width="86dp"
-                android:layout_height="86dp"
-                android:layout_marginTop="36dp"
-                android:backgroundTint="@color/black"
-                android:fontFamily="@font/hachi_maru_pop"
-                android:text="+"
-                android:textSize="30sp"
-                app:cornerRadius="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
-                app:layout_constraintStart_toEndOf="@+id/bottle"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/minus"
-                android:layout_width="86dp"
-                android:layout_height="86dp"
-                android:layout_marginTop="32dp"
-                android:backgroundTint="#EFEFEF"
-                android:text="-"
-                android:textColor="@color/black"
-                android:textSize="40sp"
-                app:cornerRadius="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.487"
-                app:layout_constraintStart_toEndOf="@+id/bottle"
-                app:layout_constraintTop_toBottomOf="@+id/text_litter" />
-
-            <TextView
-                android:id="@+id/litters_at_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:fontFamily="@font/hachi_maru_pop"
-                android:text="0"
-                android:textSize="40sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.492"
-                app:layout_constraintStart_toEndOf="@+id/bottle"
-                app:layout_constraintTop_toBottomOf="@+id/plus" />
-
-            <TextView
-                android:id="@+id/text_litter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/hachi_maru_pop"
-                android:text="миллилитров"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.336"
-                app:layout_constraintStart_toEndOf="@+id/bottle"
-                app:layout_constraintTop_toBottomOf="@+id/litters_at_day" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center">
+            android:orientation="horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginTop="20dp">
 
-            <com.db.williamchart.view.BarChartView
-                android:layout_marginTop="10dp"
-                android:id="@+id/water_barChart"
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/bottle"
+                    android:layout_width="169dp"
+                    android:layout_height="299dp"
+                    android:src="@drawable/bottle"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.076"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.972" />
+            </LinearLayout>
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="307dp"
-                android:layerType="software"
-                app:chart_barsColor="@color/blue_dark"
-                app:chart_barsRadius="10dp"
-                app:chart_labelsColor="@color/blue_dark"
-                app:chart_labelsFont="@font/play"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                app:chart_axis = "x"
-                app:chart_labelsSize="18sp"
-                app:chart_spacing="20dp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/plus"
+                    android:layout_width="86dp"
+                    android:layout_height="86dp"
+                    android:backgroundTint="@color/black"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="+"
+                    android:textSize="30sp"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.487"
+                    app:layout_constraintStart_toEndOf="@+id/bottle"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/litters_at_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="0"
+                    android:textSize="40sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.492"
+                    app:layout_constraintStart_toEndOf="@+id/bottle"
+                    app:layout_constraintTop_toBottomOf="@+id/plus" />
+
+                <TextView
+                    android:id="@+id/text_litter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/hachi_maru_pop"
+                    android:text="миллилитров"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.336"
+                    app:layout_constraintStart_toEndOf="@+id/bottle"
+                    app:layout_constraintTop_toBottomOf="@+id/litters_at_day" />
+
+                <Button
+                    android:id="@+id/minus"
+                    android:layout_width="86dp"
+                    android:layout_height="86dp"
+                    android:layout_marginTop="32dp"
+                    android:backgroundTint="#EFEFEF"
+                    android:text="-"
+                    android:textColor="@color/black"
+                    android:textSize="40sp"
+                    app:cornerRadius="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.487"
+                    app:layout_constraintStart_toEndOf="@+id/bottle"
+                    app:layout_constraintTop_toBottomOf="@+id/text_litter" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
+
+        <com.db.williamchart.view.BarChartView
+            android:id="@+id/water_barChart"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="307dp"
+            android:layerType="software"
+            app:chart_barsColor="@color/blue_dark"
+            app:chart_barsRadius="10dp"
+            app:chart_labelsColor="@color/blue_dark"
+            app:chart_labelsFont="@font/play"
+            android:layout_marginTop="25dp"
+            android:paddingBottom="20dp"
+            app:chart_axis = "x"
+            app:chart_labelsSize="18sp"
+            app:chart_spacing="25dp" />
 
     </LinearLayout>
 
