TotalFragment попытки сделать графики

--- a/app/src/main/res/layout/fragment_water.xml
+++ b/app/src/main/res/layout/fragment_water.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/plus"
                     android:layout_width="86dp"
                     android:layout_height="86dp"
-                    android:backgroundTint="@color/black"
+                    android:backgroundTint="@color/blue_dark"
                     android:fontFamily="@font/hachi_maru_pop"
                     android:text="+"
                     android:textSize="30sp"
@@ -86,10 +86,10 @@
                     android:layout_width="86dp"
                     android:layout_height="86dp"
                     android:layout_marginTop="32dp"
-                    android:backgroundTint="#EFEFEF"
-                    android:text="-"
-                    android:textColor="@color/black"
-                    android:textSize="40sp"
+                    android:backgroundTint="@color/blue_light"
+                    android:text="—"
+                    android:textColor="@color/blue_dark"
+                    android:textSize="20sp"
                     app:cornerRadius="10dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.487"
