--- a/app/src/main/res/layout/fragment_total.xml
+++ b/app/src/main/res/layout/fragment_total.xml
@@ -3,6 +3,113 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.TotalFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginTop="20dp"
+            android:gravity="">
+
+            <Button
+                android:id="@+id/butt_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/blue_dark"
+                android:fontFamily="@font/hachi_maru_pop"
+                android:text="день"
+                android:textSize="13sp"
+                app:cornerRadius="10dp"
+                android:layout_marginEnd="5dp"/>
+
+            <Button
+                android:id="@+id/butt_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/blue_light"
+                android:fontFamily="@font/hachi_maru_pop"
+                android:text="неделя"
+                android:textSize="13sp"
+                android:textColor="@color/blue_dark"
+                app:cornerRadius="10dp"
+                android:layout_marginEnd="5dp"/>
+
+            <Button
+                android:id="@+id/butt_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/blue_light"
+                android:fontFamily="@font/hachi_maru_pop"
+                android:text="месяц"
+                android:textSize="13sp"
+                android:textColor="@color/blue_dark"
+                app:cornerRadius="10dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <com.db.williamchart.view.BarChartView
+                android:id="@+id/water_progress"
+                android:layout_gravity="start"
+                android:layout_width="60dp"
+                android:layout_height="300dp"
+                android:layout_marginTop="25dp"
+                android:layerType="software"
+                app:chart_axis="x"
+                app:chart_barsColor="@color/blue_dark"
+                app:chart_barsRadius="10dp"
+                app:chart_labelsColor="@color/blue_dark"
+                app:chart_labelsFont="@font/play"
+                app:chart_labelsSize="18sp"
+                app:chart_spacing="60dp"
+                app:chart_barsBackgroundColor="@color/blue_light"
+                 />
+
+            <com.db.williamchart.view.BarChartView
+                android:id="@+id/coffee_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_marginTop="25dp"
+                android:layerType="software"
+                android:layout_marginStart="25dp"
+                app:chart_axis="x"
+                app:chart_barsColor="@color/blue_dark"
+                app:chart_barsRadius="10dp"
+                app:chart_labelsColor="@color/blue_dark"
+                app:chart_labelsFont="@font/play"
+                app:chart_labelsSize="18sp"
+                app:chart_spacing="60dp" />
+
+            <com.db.williamchart.view.BarChartView
+                android:id="@+id/tea_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_marginTop="25dp"
+                android:layerType="software"
+                android:layout_marginStart="25dp"
+                app:chart_axis="x"
+                app:chart_barsColor="@color/blue_dark"
+                app:chart_barsRadius="10dp"
+                app:chart_labelsColor="@color/blue_dark"
+                app:chart_labelsFont="@font/play"
+                app:chart_labelsSize="18sp"
+                app:chart_spacing="60dp" />
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </FrameLayout>
